@@ -41,7 +41,13 @@ class Smarty_Internal_Compile_Append extends Smarty_Internal_CompileBase {
         $_attr = $this->_get_attributes($args);
 
         if (isset($_attr['scope'])) {
-            $_scope = trim($_attr['scope'],'\'');
+            if ($_attr['scope'] == '\'parent\'') {
+                $_scope = SMARTY_PARENT_SCOPE;
+            } elseif ($_attr['scope'] == '\'root\'') {
+                $_scope = SMARTY_ROOT_SCOPE;
+           } elseif ($_attr['scope'] == '\'global\'') {
+                $_scope = SMARTY_GLOBAL_SCOPE;
+            } 
         } 
         // compiled output
         if (isset($_attr['index'])) {
